# find-that-charity

./: .env.example  .gitignore  LICENSE  Procfile  app.json  app.yaml  create_elasticsearch.py  crontab  dev-requirements.in  dev-requirements.txt  es_config.yml  fetch_data.py  find_limited.py  import_data.py  import_postcodes.py  manage.py  migrations.md  mise.toml  package.json  project_roadmap.md  pyproject.toml  pytest.ini  readme.md  recon_config.yml  release.sh  requirements.in  requirements.txt  server.py  todo.md  update_daily.sh  update_saturday.sh  update_sunday.sh  webpack.config.js
addtocsv/: apps.py  views.py
api/: endpoints.py  filters.py  schema.py  serializers.py  urls.py  views.py
charity/: admin.py  apps.py  feeds.py  models.py  tests.py  urls.py  views.py
companies/: documents.py  models.py  urls.py  views.py
data_import/: bcp.py  create_elasticsearch.py  fetch_data.py  import_data.py  reindex_data.py
findthatcharity/: asgi.py  db_router.py  endpoints.py  jinja2.py  middleware.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
ftc/: admin.py  apps.py  documents.py  feeds.py  models.py  query.py  urls.py  views.py
ftcbot/: apps.py
ftcprofile/: admin.py  apps.py  controller.py  models.py  urls.py  views.py
geo/: apps.py  models.py
import/: create_elasticsearch.py  fetch_data.py  import_data.py
jinja2/: account_profile.html.j2  base.html.j2  error.html.j2  opensearch.xml.j2  robots.txt
other_data/: apps.py  models.py
reconcile/: apps.py  companies.py  query.json  query.py  urls.py  utils.py  views.py
server/: csv_upload.py  find_limited.py  queries.py  recon_test.py  server.py
templates/: base.html
tests/: example_csv.csv
views/: about.html  atom.xml  base.html  charity.html  (+14 more)
(+667 files in other folders)
